--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <script src="game.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <div id="overlay">
+        <div>
+            <h3 id="h3overlay"></h3>
+            <button id="reset">Play again</button>
+        </div>
+    </div>
+    <div class="title">Rock, Paper, Scissors!</div>
+    <div class="score">
+        <div class="player">
+            <h2 class="playerTitle">Player</h2>
+            <div class="playerScore"></div>
+            <div class="playerIcon"></div>
+        </div>
+        <div class="computer">
+            <h2 class="compTitle">Computer</h2>
+            <div class="compScore"></div>
+            <div class="compIcon"></div>
+        </div>
+    </div>
 
-    <script src="game.js"></script>
+    <div class="roundText">Choose your move!</div>
+
+    <div class="content">
+        <button class="rock">&#129704</button>
+        <button class="paper">&#128196</button>
+        <button class="scissors">&#9986</button>
+    </div>
+
+    <div class="footer">Created by Estuardo Gonzalez</div>
 </body>
 </html>
